--- a/ipynb/Face360-Clean.ipynb
+++ b/ipynb/Face360-Clean.ipynb
@@ -696,6 +696,703 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[(319, 2),\n",
+       "  (319, 1),\n",
+       "  (319, 0),\n",
+       "  (959, 0),\n",
+       "  (959, 1),\n",
+       "  (959, 2),\n",
+       "  (959, 3),\n",
+       "  (959, 4),\n",
+       "  (959, 5),\n",
+       "  (959, 6),\n",
+       "  (959, 7),\n",
+       "  (959, 8),\n",
+       "  (959, 9),\n",
+       "  (959, 10),\n",
+       "  (959, 11),\n",
+       "  (959, 12),\n",
+       "  (959, 13),\n",
+       "  (959, 14),\n",
+       "  (959, 15),\n",
+       "  (959, 16),\n",
+       "  (959, 17),\n",
+       "  (959, 18),\n",
+       "  (959, 19),\n",
+       "  (959, 20),\n",
+       "  (959, 21),\n",
+       "  (959, 22),\n",
+       "  (959, 23),\n",
+       "  (959, 24),\n",
+       "  (959, 25),\n",
+       "  (959, 26),\n",
+       "  (959, 27),\n",
+       "  (959, 28),\n",
+       "  (959, 29),\n",
+       "  (959, 30),\n",
+       "  (959, 31),\n",
+       "  (959, 32),\n",
+       "  (959, 33),\n",
+       "  (959, 34),\n",
+       "  (959, 35),\n",
+       "  (959, 36),\n",
+       "  (959, 37),\n",
+       "  (959, 38),\n",
+       "  (959, 39),\n",
+       "  (959, 40),\n",
+       "  (959, 41),\n",
+       "  (959, 42),\n",
+       "  (959, 43),\n",
+       "  (959, 44),\n",
+       "  (959, 45),\n",
+       "  (959, 46),\n",
+       "  (959, 47),\n",
+       "  (959, 48),\n",
+       "  (959, 49),\n",
+       "  (959, 50),\n",
+       "  (959, 51),\n",
+       "  (959, 52),\n",
+       "  (959, 53),\n",
+       "  (959, 54),\n",
+       "  (959, 55),\n",
+       "  (959, 56),\n",
+       "  (959, 57),\n",
+       "  (959, 58),\n",
+       "  (959, 59),\n",
+       "  (959, 60),\n",
+       "  (959, 61),\n",
+       "  (959, 62),\n",
+       "  (959, 63),\n",
+       "  (959, 64),\n",
+       "  (959, 65),\n",
+       "  (959, 66),\n",
+       "  (959, 67),\n",
+       "  (959, 68),\n",
+       "  (959, 69),\n",
+       "  (959, 70),\n",
+       "  (959, 71),\n",
+       "  (959, 72),\n",
+       "  (959, 73),\n",
+       "  (959, 74),\n",
+       "  (959, 75),\n",
+       "  (959, 76),\n",
+       "  (959, 77),\n",
+       "  (959, 78),\n",
+       "  (959, 79),\n",
+       "  (959, 80),\n",
+       "  (959, 81),\n",
+       "  (959, 82),\n",
+       "  (959, 83),\n",
+       "  (959, 84),\n",
+       "  (959, 85),\n",
+       "  (959, 86),\n",
+       "  (959, 87),\n",
+       "  (959, 88),\n",
+       "  (959, 89),\n",
+       "  (959, 90),\n",
+       "  (959, 91),\n",
+       "  (959, 92),\n",
+       "  (959, 93),\n",
+       "  (959, 94),\n",
+       "  (959, 95),\n",
+       "  (958, 95),\n",
+       "  (957, 95),\n",
+       "  (956, 95),\n",
+       "  (955, 95),\n",
+       "  (954, 95),\n",
+       "  (953, 95),\n",
+       "  (952, 95),\n",
+       "  (951, 96),\n",
+       "  (950, 96),\n",
+       "  (949, 96),\n",
+       "  (948, 96),\n",
+       "  (947, 96),\n",
+       "  (946, 96),\n",
+       "  (945, 96),\n",
+       "  (944, 96),\n",
+       "  (944, 97),\n",
+       "  (943, 97),\n",
+       "  (942, 97),\n",
+       "  (941, 97),\n",
+       "  (940, 97),\n",
+       "  (939, 97),\n",
+       "  (938, 97),\n",
+       "  (937, 98),\n",
+       "  (936, 98),\n",
+       "  (935, 98),\n",
+       "  (934, 98),\n",
+       "  (933, 98),\n",
+       "  (932, 98),\n",
+       "  (931, 98),\n",
+       "  (931, 99),\n",
+       "  (930, 99),\n",
+       "  (929, 99),\n",
+       "  (928, 99),\n",
+       "  (927, 99),\n",
+       "  (926, 99),\n",
+       "  (925, 100),\n",
+       "  (924, 100),\n",
+       "  (923, 100),\n",
+       "  (922, 100),\n",
+       "  (921, 100),\n",
+       "  (920, 101),\n",
+       "  (919, 101),\n",
+       "  (918, 101),\n",
+       "  (917, 101),\n",
+       "  (916, 101),\n",
+       "  (916, 102),\n",
+       "  (915, 102),\n",
+       "  (914, 102),\n",
+       "  (913, 102),\n",
+       "  (912, 102),\n",
+       "  (911, 102),\n",
+       "  (911, 103),\n",
+       "  (910, 103),\n",
+       "  (909, 103),\n",
+       "  (908, 103),\n",
+       "  (907, 103),\n",
+       "  (907, 104),\n",
+       "  (906, 104),\n",
+       "  (905, 104),\n",
+       "  (904, 104),\n",
+       "  (903, 105),\n",
+       "  (902, 105),\n",
+       "  (901, 105),\n",
+       "  (900, 105),\n",
+       "  (899, 105),\n",
+       "  (899, 106),\n",
+       "  (898, 106),\n",
+       "  (897, 106),\n",
+       "  (896, 106),\n",
+       "  (895, 107),\n",
+       "  (894, 107),\n",
+       "  (893, 107),\n",
+       "  (892, 107),\n",
+       "  (892, 108),\n",
+       "  (891, 108),\n",
+       "  (890, 108),\n",
+       "  (889, 108),\n",
+       "  (889, 109),\n",
+       "  (888, 109),\n",
+       "  (887, 109),\n",
+       "  (886, 109),\n",
+       "  (885, 110),\n",
+       "  (884, 110),\n",
+       "  (883, 110),\n",
+       "  (883, 111),\n",
+       "  (882, 111),\n",
+       "  (881, 111),\n",
+       "  (880, 111),\n",
+       "  (880, 112),\n",
+       "  (879, 112),\n",
+       "  (878, 112),\n",
+       "  (877, 112),\n",
+       "  (877, 113),\n",
+       "  (876, 113),\n",
+       "  (875, 113),\n",
+       "  (874, 114),\n",
+       "  (873, 114),\n",
+       "  (872, 114),\n",
+       "  (871, 115),\n",
+       "  (870, 115),\n",
+       "  (869, 115),\n",
+       "  (869, 116),\n",
+       "  (868, 116),\n",
+       "  (867, 116),\n",
+       "  (866, 117),\n",
+       "  (865, 117),\n",
+       "  (864, 117),\n",
+       "  (864, 118),\n",
+       "  (863, 118),\n",
+       "  (862, 118),\n",
+       "  (861, 119),\n",
+       "  (860, 119),\n",
+       "  (859, 120),\n",
+       "  (858, 120),\n",
+       "  (857, 121),\n",
+       "  (856, 121),\n",
+       "  (855, 121),\n",
+       "  (855, 122),\n",
+       "  (854, 122),\n",
+       "  (853, 122),\n",
+       "  (852, 123),\n",
+       "  (851, 123),\n",
+       "  (851, 124),\n",
+       "  (850, 124),\n",
+       "  (849, 124),\n",
+       "  (849, 125),\n",
+       "  (848, 125),\n",
+       "  (847, 125),\n",
+       "  (847, 126),\n",
+       "  (846, 126),\n",
+       "  (845, 126),\n",
+       "  (845, 127),\n",
+       "  (844, 127),\n",
+       "  (843, 127),\n",
+       "  (843, 128),\n",
+       "  (842, 128),\n",
+       "  (841, 129),\n",
+       "  (840, 129),\n",
+       "  (839, 130),\n",
+       "  (838, 130),\n",
+       "  (837, 131),\n",
+       "  (836, 131),\n",
+       "  (836, 132),\n",
+       "  (835, 132),\n",
+       "  (834, 132),\n",
+       "  (834, 133),\n",
+       "  (833, 133),\n",
+       "  (832, 134),\n",
+       "  (831, 134),\n",
+       "  (831, 135),\n",
+       "  (830, 135),\n",
+       "  (829, 136),\n",
+       "  (828, 136),\n",
+       "  (828, 137),\n",
+       "  (827, 137),\n",
+       "  (826, 137),\n",
+       "  (826, 138),\n",
+       "  (825, 138),\n",
+       "  (825, 139),\n",
+       "  (824, 139),\n",
+       "  (823, 140),\n",
+       "  (822, 140),\n",
+       "  (822, 141),\n",
+       "  (821, 141),\n",
+       "  (820, 142),\n",
+       "  (819, 142),\n",
+       "  (819, 143),\n",
+       "  (818, 143),\n",
+       "  (817, 144),\n",
+       "  (816, 145),\n",
+       "  (815, 145),\n",
+       "  (815, 146),\n",
+       "  (814, 146),\n",
+       "  (814, 147),\n",
+       "  (813, 147),\n",
+       "  (812, 148),\n",
+       "  (811, 148),\n",
+       "  (811, 149),\n",
+       "  (810, 149),\n",
+       "  (810, 150),\n",
+       "  (809, 150),\n",
+       "  (809, 151),\n",
+       "  (808, 151),\n",
+       "  (807, 152),\n",
+       "  (806, 153),\n",
+       "  (805, 153),\n",
+       "  (805, 154),\n",
+       "  (804, 154),\n",
+       "  (804, 155),\n",
+       "  (803, 155),\n",
+       "  (803, 156),\n",
+       "  (802, 156),\n",
+       "  (802, 157),\n",
+       "  (801, 157),\n",
+       "  (800, 158),\n",
+       "  (799, 159),\n",
+       "  (798, 160),\n",
+       "  (797, 161),\n",
+       "  (796, 162),\n",
+       "  (795, 162),\n",
+       "  (795, 163),\n",
+       "  (794, 163),\n",
+       "  (794, 164),\n",
+       "  (793, 164),\n",
+       "  (793, 165),\n",
+       "  (792, 166),\n",
+       "  (791, 167),\n",
+       "  (790, 167),\n",
+       "  (789, 166),\n",
+       "  (788, 166),\n",
+       "  (788, 165),\n",
+       "  (787, 165),\n",
+       "  (786, 165),\n",
+       "  (786, 164),\n",
+       "  (785, 164),\n",
+       "  (784, 164),\n",
+       "  (784, 163),\n",
+       "  (783, 163),\n",
+       "  (782, 163),\n",
+       "  (781, 163),\n",
+       "  (781, 162),\n",
+       "  (780, 162),\n",
+       "  (779, 162),\n",
+       "  (779, 161),\n",
+       "  (778, 161),\n",
+       "  (777, 161),\n",
+       "  (777, 160),\n",
+       "  (776, 160),\n",
+       "  (775, 160),\n",
+       "  (775, 159),\n",
+       "  (774, 159),\n",
+       "  (773, 159),\n",
+       "  (772, 159),\n",
+       "  (772, 158),\n",
+       "  (771, 158),\n",
+       "  (770, 158),\n",
+       "  (770, 157),\n",
+       "  (769, 157),\n",
+       "  (768, 157),\n",
+       "  (768, 156),\n",
+       "  (767, 156),\n",
+       "  (766, 156),\n",
+       "  (765, 156),\n",
+       "  (765, 155),\n",
+       "  (764, 155),\n",
+       "  (763, 155),\n",
+       "  (762, 154),\n",
+       "  (761, 154),\n",
+       "  (760, 154),\n",
+       "  (760, 153),\n",
+       "  (759, 153),\n",
+       "  (758, 153),\n",
+       "  (757, 153),\n",
+       "  (757, 152),\n",
+       "  (756, 152),\n",
+       "  (755, 152),\n",
+       "  (754, 151),\n",
+       "  (753, 151),\n",
+       "  (752, 151),\n",
+       "  (751, 150),\n",
+       "  (750, 150),\n",
+       "  (749, 150),\n",
+       "  (748, 149),\n",
+       "  (747, 149),\n",
+       "  (746, 149),\n",
+       "  (745, 148),\n",
+       "  (744, 148),\n",
+       "  (743, 148),\n",
+       "  (742, 148),\n",
+       "  (742, 147),\n",
+       "  (741, 147),\n",
+       "  (740, 147),\n",
+       "  (739, 147),\n",
+       "  (738, 146),\n",
+       "  (737, 146),\n",
+       "  (736, 146),\n",
+       "  (735, 146),\n",
+       "  (735, 145),\n",
+       "  (734, 145),\n",
+       "  (733, 145),\n",
+       "  (732, 145),\n",
+       "  (731, 145),\n",
+       "  (731, 144),\n",
+       "  (730, 144),\n",
+       "  (729, 144),\n",
+       "  (728, 144),\n",
+       "  (727, 144),\n",
+       "  (727, 143),\n",
+       "  (726, 143),\n",
+       "  (725, 143),\n",
+       "  (724, 143),\n",
+       "  (723, 143),\n",
+       "  (723, 142),\n",
+       "  (722, 142),\n",
+       "  (721, 142),\n",
+       "  (720, 142),\n",
+       "  (719, 142),\n",
+       "  (718, 141),\n",
+       "  (717, 141),\n",
+       "  (716, 141),\n",
+       "  (715, 141),\n",
+       "  (714, 141),\n",
+       "  (714, 140),\n",
+       "  (713, 140),\n",
+       "  (712, 140),\n",
+       "  (711, 140),\n",
+       "  (710, 140),\n",
+       "  (709, 140),\n",
+       "  (709, 139),\n",
+       "  (708, 139),\n",
+       "  (707, 139),\n",
+       "  (706, 139),\n",
+       "  (705, 139),\n",
+       "  (704, 139),\n",
+       "  (703, 139),\n",
+       "  (703, 138),\n",
+       "  (702, 138),\n",
+       "  (701, 138),\n",
+       "  (700, 138),\n",
+       "  (699, 138),\n",
+       "  (698, 138),\n",
+       "  (697, 138),\n",
+       "  (697, 137),\n",
+       "  (696, 137),\n",
+       "  (695, 137),\n",
+       "  (694, 137),\n",
+       "  (693, 137),\n",
+       "  (692, 137),\n",
+       "  (691, 137),\n",
+       "  (690, 136),\n",
+       "  (689, 136),\n",
+       "  (688, 136),\n",
+       "  (687, 136),\n",
+       "  (686, 136),\n",
+       "  (685, 136),\n",
+       "  (684, 136),\n",
+       "  (683, 136),\n",
+       "  (682, 136),\n",
+       "  (682, 135),\n",
+       "  (681, 135),\n",
+       "  (680, 135),\n",
+       "  (679, 135),\n",
+       "  (678, 135),\n",
+       "  (677, 135),\n",
+       "  (676, 135),\n",
+       "  (675, 135),\n",
+       "  (674, 135),\n",
+       "  (673, 135),\n",
+       "  (672, 135),\n",
+       "  (672, 134),\n",
+       "  (671, 134),\n",
+       "  (670, 134),\n",
+       "  (669, 134),\n",
+       "  (668, 134),\n",
+       "  (667, 134),\n",
+       "  (666, 134),\n",
+       "  (665, 134),\n",
+       "  (664, 134),\n",
+       "  (663, 134),\n",
+       "  (662, 134),\n",
+       "  (661, 134),\n",
+       "  (660, 134),\n",
+       "  (659, 134),\n",
+       "  (658, 134),\n",
+       "  (657, 134),\n",
+       "  (656, 133),\n",
+       "  (655, 133),\n",
+       "  (654, 133),\n",
+       "  (653, 133),\n",
+       "  (652, 133),\n",
+       "  (651, 133),\n",
+       "  (650, 133),\n",
+       "  (649, 133),\n",
+       "  (648, 133),\n",
+       "  (647, 133),\n",
+       "  (646, 133),\n",
+       "  (645, 133),\n",
+       "  (644, 133),\n",
+       "  (643, 133),\n",
+       "  (642, 133),\n",
+       "  (641, 133),\n",
+       "  (640, 133),\n",
+       "  (639, 133),\n",
+       "  (638, 133),\n",
+       "  (637, 133),\n",
+       "  (636, 133),\n",
+       "  (635, 133),\n",
+       "  (635, 132),\n",
+       "  (635, 131),\n",
+       "  (634, 131),\n",
+       "  (634, 130),\n",
+       "  (634, 129),\n",
+       "  (634, 128),\n",
+       "  (634, 127),\n",
+       "  (634, 126),\n",
+       "  (634, 125),\n",
+       "  (634, 124),\n",
+       "  (634, 123),\n",
+       "  (634, 122),\n",
+       "  (634, 121),\n",
+       "  (634, 120),\n",
+       "  (634, 119),\n",
+       "  (634, 118),\n",
+       "  (634, 117),\n",
+       "  (634, 116),\n",
+       "  (634, 115),\n",
+       "  (634, 114),\n",
+       "  (634, 113),\n",
+       "  (634, 112),\n",
+       "  (634, 111),\n",
+       "  (634, 110),\n",
+       "  (634, 109),\n",
+       "  (634, 108),\n",
+       "  (634, 107),\n",
+       "  (634, 106),\n",
+       "  (634, 105),\n",
+       "  (633, 105),\n",
+       "  (633, 104),\n",
+       "  (633, 103),\n",
+       "  (633, 102),\n",
+       "  (633, 101),\n",
+       "  (633, 100),\n",
+       "  (633, 99),\n",
+       "  (633, 98),\n",
+       "  (633, 97),\n",
+       "  (633, 96),\n",
+       "  (633, 95),\n",
+       "  (633, 94),\n",
+       "  (633, 93),\n",
+       "  (633, 92),\n",
+       "  (633, 91),\n",
+       "  (633, 90),\n",
+       "  (633, 89),\n",
+       "  (633, 88),\n",
+       "  (633, 87),\n",
+       "  (632, 87),\n",
+       "  (632, 86),\n",
+       "  (632, 85),\n",
+       "  (632, 84),\n",
+       "  (632, 83),\n",
+       "  (632, 82),\n",
+       "  (632, 81),\n",
+       "  (632, 80),\n",
+       "  (632, 79),\n",
+       "  (632, 78),\n",
+       "  (632, 77),\n",
+       "  (632, 76),\n",
+       "  (632, 75),\n",
+       "  (632, 74),\n",
+       "  (631, 74),\n",
+       "  (631, 73),\n",
+       "  (631, 72),\n",
+       "  (631, 71),\n",
+       "  (631, 70),\n",
+       "  (631, 69),\n",
+       "  (631, 68),\n",
+       "  (631, 67),\n",
+       "  (631, 66),\n",
+       "  (631, 65),\n",
+       "  (630, 64),\n",
+       "  (630, 63),\n",
+       "  (630, 62),\n",
+       "  (630, 61),\n",
+       "  (630, 60),\n",
+       "  (630, 59),\n",
+       "  (630, 58),\n",
+       "  (630, 57),\n",
+       "  (629, 57),\n",
+       "  (629, 56),\n",
+       "  (629, 55),\n",
+       "  (629, 54),\n",
+       "  (629, 53),\n",
+       "  (629, 52),\n",
+       "  (629, 51),\n",
+       "  (628, 51),\n",
+       "  (628, 50),\n",
+       "  (628, 49),\n",
+       "  (628, 48),\n",
+       "  (628, 47),\n",
+       "  (628, 46),\n",
+       "  (627, 46),\n",
+       "  (627, 45),\n",
+       "  (627, 44),\n",
+       "  (627, 43),\n",
+       "  (627, 42),\n",
+       "  (626, 42),\n",
+       "  (626, 41),\n",
+       "  (626, 40),\n",
+       "  (626, 39),\n",
+       "  (625, 39),\n",
+       "  (625, 38),\n",
+       "  (625, 37),\n",
+       "  (625, 36),\n",
+       "  (624, 36),\n",
+       "  (624, 35),\n",
+       "  (624, 34),\n",
+       "  (624, 33),\n",
+       "  (623, 33),\n",
+       "  (623, 32),\n",
+       "  (623, 31),\n",
+       "  (622, 31),\n",
+       "  (622, 30),\n",
+       "  (622, 29),\n",
+       "  (621, 29),\n",
+       "  (621, 28),\n",
+       "  (620, 28),\n",
+       "  (620, 27),\n",
+       "  (620, 26),\n",
+       "  (619, 26),\n",
+       "  (619, 25),\n",
+       "  (618, 24),\n",
+       "  (617, 23),\n",
+       "  (616, 22),\n",
+       "  (616, 21),\n",
+       "  (615, 21),\n",
+       "  (615, 20),\n",
+       "  (614, 20),\n",
+       "  (613, 19),\n",
+       "  (612, 19),\n",
+       "  (612, 18),\n",
+       "  (611, 18),\n",
+       "  (611, 17),\n",
+       "  (610, 17),\n",
+       "  (609, 17),\n",
+       "  (609, 16),\n",
+       "  (608, 16),\n",
+       "  (607, 15),\n",
+       "  (606, 15),\n",
+       "  (605, 15),\n",
+       "  (605, 14),\n",
+       "  (604, 14),\n",
+       "  (603, 14),\n",
+       "  (603, 13),\n",
+       "  (602, 13),\n",
+       "  (601, 13),\n",
+       "  (600, 13),\n",
+       "  (599, 12),\n",
+       "  (598, 12),\n",
+       "  (597, 11),\n",
+       "  (596, 11),\n",
+       "  (595, 11),\n",
+       "  (593, 11),\n",
+       "  (592, 10),\n",
+       "  (591, 10),\n",
+       "  (590, 10),\n",
+       "  (588, 9),\n",
+       "  (587, 9),\n",
+       "  (585, 9),\n",
+       "  (584, 9),\n",
+       "  (582, 8),\n",
+       "  (580, 8),\n",
+       "  (578, 8),\n",
+       "  (576, 7),\n",
+       "  (574, 7),\n",
+       "  (571, 7),\n",
+       "  (569, 7),\n",
+       "  (566, 6),\n",
+       "  (563, 6),\n",
+       "  (559, 6),\n",
+       "  (556, 6),\n",
+       "  (552, 5),\n",
+       "  (548, 5),\n",
+       "  (543, 5),\n",
+       "  (538, 5),\n",
+       "  (532, 4),\n",
+       "  (526, 4),\n",
+       "  (519, 4),\n",
+       "  (512, 4),\n",
+       "  (503, 3),\n",
+       "  (494, 3),\n",
+       "  (483, 3),\n",
+       "  (471, 3),\n",
+       "  (458, 3),\n",
+       "  (443, 2),\n",
+       "  (426, 2),\n",
+       "  (407, 2),\n",
+       "  (387, 2),\n",
+       "  (365, 2),\n",
+       "  (343, 2)]]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nms_bounds"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
