changes to save progress of dataset creation

--- a/ipynb/FDDB360_generator.ipynb
+++ b/ipynb/FDDB360_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,27 +78,57 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9d12ee8ec0614aa080462fe6964c36a5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=290.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "##projection -90 to 90 - aproximatedely the same amount of images in each position [-60, -30, 0, 30, 60] - +-2000 range 15\n",
     "##10%\n",
     "\n",
     "dataset_path = \"../data/dataset_360\"\n",
     "\n",
-    "#os.mkdir(dataset_path)  \n",
-    "for fold in folds:\n",
+    "if not os.path.exists(dataset_path):\n",
+    "    os.mkdir(dataset_path)  \n",
+    "for i, fold in enumerate(folds):\n",
     "    x = re.findall('FDDB-fold-\\d\\d', fold)[0]\n",
     "    path_fold = os.path.join(dataset_path, x)\n",
     "    #print(path_fold)\n",
     "    images = read_fold(fold)\n",
+    "    temp_file = os.path.join(dataset_path,f'temp{i}.npy')\n",
     "    \n",
-    "    vec = np.random.choice(7, len(images), p=[0.05,0.18, 0.18, 0.18, 0.18, 0.18, 0.05]) #defines the vertical position\n",
-    "    back_inds = np.random.choice(len(backs), len(images)) #defines the index of the background image\n",
+    "    if not os.path.exists(temp_file):        \n",
+    "        vec = np.random.choice(7, len(images), p=[0.05,0.18, 0.18, 0.18, 0.18, 0.18, 0.05]) #defines the vertical position\n",
+    "        back_inds = np.random.choice(len(backs), len(images)) #defines the index of the background image\n",
+    "        \n",
+    "        temp = open(temp_file, \"wb\")\n",
+    "        np.save(temp, [vec, back_inds])\n",
+    "        temp.close()\n",
+    "    else:\n",
+    "        print('exists')\n",
+    "        with open(temp_file, \"rb\") as temp:\n",
+    "            vec, back_inds = np.load(temp)\n",
     "    \n",
-    "    #os.mkdir(path_fold)    \n",
+    "    if not os.path.exists(path_fold):\n",
+    "        os.mkdir(path_fold)    \n",
     "    for image, pos, back_i in tqdm(zip(images, vec, back_inds), total = len(images)):\n",
     "        im_path = image['path'].replace('/', '_')+'.jpg'\n",
     "        proj_path = os.path.join(path_fold, im_path)\n",
+    "        \n",
+    "        if os.path.exists(proj_path):\n",
+    "            continue\n",
     "        \n",
     "        base_phi = -90+pos*30 #-90 to 90\n",
     "        \n",
@@ -109,7 +139,7 @@
     "        else:\n",
     "            phi = np.random.randint(base_phi-15, base_phi+1)\n",
     "        \n",
-    "        theta = np.random.randint(-180, 181)\n",
+    "        theta = np.random.randint(-180, 180)\n",
     "        r_h=random.uniform(0.5, 1)\n",
     "        proj, faces_points = project_fddb_to_equi(image, backs[back_i].copy(), np.radians(phi), np.radians(theta), r_h)\n",
     "        \n",
@@ -127,7 +157,19 @@
     "        cv2.imwrite(proj_path, proj)\n",
     "        \n",
     "        #print(proj_path)\n",
-    "        #print(phi, theta)\n"
+    "        #print(phi, theta)\n",
+    "    if os.path.exists(temp_file):\n",
+    "        os.remove(temp_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.exists('temp.npy'):\n",
+    "    os.remove('temp.npy')"
    ]
   },
   {
