modularized mtcnn pytorch

--- a/ipynb/Face360-Modularized.ipynb
+++ b/ipynb/Face360-Modularized.ipynb
@@ -25,7 +25,7 @@
     "from utils import *\n",
     "from shapely import geometry\n",
     "from faces_clustering import get_files_folder, VideoClustering, is_image\n",
-    "from faces_viewport import extract_frames, detect_faces, detect_faces_viewports, show_bounds, non_maximum_supression"
+    "from faces_viewport import extract_frames, detect_faces_viewports, show_bounds, non_maximum_supression"
    ]
   },
   {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
