sphere mtcnn modularized and tested

--- a/ipynb/dataset_detection_results.ipynb
+++ b/ipynb/dataset_detection_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,8 +10,7 @@
      "output_type": "stream",
      "text": [
       "C:\\Users\\paulo\\anaconda3\\envs\\faces\\lib\\site-packages\\tqdm\\std.py:668: FutureWarning: The Panel class is removed from pandas. Accessing it from the top-level namespace will also be removed in the next version\n",
-      "  from pandas import Panel\n",
-      "Using TensorFlow backend.\n"
+      "  from pandas import Panel\n"
      ]
     }
    ],
@@ -30,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,6 +62,7 @@
        "      <th>faces</th>\n",
        "      <th>circular_perimeter_faces</th>\n",
        "      <th>detections_mtcnn</th>\n",
+       "      <th>detections_viewport</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -77,6 +77,7 @@
        "      <td>[[(320, 114), (374, 112), (427, 116), (328, 15...</td>\n",
        "      <td>[[(320, 114), (374, 112), (427, 116), (415, 15...</td>\n",
        "      <td>[[(332, 119), (402, 119), (402, 202), (332, 20...</td>\n",
+       "      <td>[[(324, 138), (357, 125), (399, 115), (411, 15...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -89,6 +90,7 @@
        "      <td>[[(1138, 357), (1152, 357), (1166, 356), (1138...</td>\n",
        "      <td>[[(1138, 357), (1152, 357), (1166, 356), (1167...</td>\n",
        "      <td>[[(1140, 362), (1164, 362), (1164, 395), (1140...</td>\n",
+       "      <td>[[(1139, 361), (1149, 361), (1160, 360), (1162...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -101,6 +103,7 @@
        "      <td>[[(941, 453), (965, 457), (990, 459), (932, 47...</td>\n",
        "      <td>[[(941, 453), (965, 457), (990, 459), (988, 48...</td>\n",
        "      <td>[[(931, 461), (975, 461), (975, 505), (931, 50...</td>\n",
+       "      <td>[[(931, 462), (955, 463), (979, 463), (981, 48...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -113,6 +116,7 @@
        "      <td>[[(940, 144), (975, 143), (1010, 144), (945, 1...</td>\n",
        "      <td>[[(940, 144), (975, 143), (1010, 144), (1006, ...</td>\n",
        "      <td>[[(947, 147), (1000, 147), (1000, 205), (947, ...</td>\n",
+       "      <td>[[(941, 151), (973, 150), (1005, 153), (1002, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -125,6 +129,7 @@
        "      <td>[[(149, 430), (170, 431), (190, 431), (147, 45...</td>\n",
        "      <td>[[(149, 430), (170, 431), (190, 431), (192, 45...</td>\n",
        "      <td>[[(150, 437), (186, 437), (186, 480), (150, 48...</td>\n",
+       "      <td>[[(147, 438), (166, 438), (185, 437), (187, 45...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -159,15 +164,22 @@
        "3  [[(940, 144), (975, 143), (1010, 144), (1006, ...   \n",
        "4  [[(149, 430), (170, 431), (190, 431), (192, 45...   \n",
        "\n",
-       "                                    detections_mtcnn  \n",
-       "0  [[(332, 119), (402, 119), (402, 202), (332, 20...  \n",
-       "1  [[(1140, 362), (1164, 362), (1164, 395), (1140...  \n",
-       "2  [[(931, 461), (975, 461), (975, 505), (931, 50...  \n",
-       "3  [[(947, 147), (1000, 147), (1000, 205), (947, ...  \n",
-       "4  [[(150, 437), (186, 437), (186, 480), (150, 48...  "
+       "                                    detections_mtcnn  \\\n",
+       "0  [[(332, 119), (402, 119), (402, 202), (332, 20...   \n",
+       "1  [[(1140, 362), (1164, 362), (1164, 395), (1140...   \n",
+       "2  [[(931, 461), (975, 461), (975, 505), (931, 50...   \n",
+       "3  [[(947, 147), (1000, 147), (1000, 205), (947, ...   \n",
+       "4  [[(150, 437), (186, 437), (186, 480), (150, 48...   \n",
+       "\n",
+       "                                 detections_viewport  \n",
+       "0  [[(324, 138), (357, 125), (399, 115), (411, 15...  \n",
+       "1  [[(1139, 361), (1149, 361), (1160, 360), (1162...  \n",
+       "2  [[(931, 462), (955, 463), (979, 463), (981, 48...  \n",
+       "3  [[(941, 151), (973, 150), (1005, 153), (1002, ...  \n",
+       "4  [[(147, 438), (166, 438), (185, 437), (187, 45...  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,6 +463,89 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset360.to_pickle('../dataframes/dataset360_detections.pkl')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sphere Net MTCNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sphere_mtcnn import SphereMTCNN_Torch\n",
+    "\n",
+    "sphere_mtcnn = SphereMTCNN_Torch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def sphere_aux(path):\n",
+    "    try:\n",
+    "        bounds = sphere_mtcnn.detect_faces_polys(path)[0]\n",
+    "    except:\n",
+    "        bounds = 'erro'\n",
+    "    return bounds\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "51766fcb0b7349d6a21aa2f75163f6b1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=2845.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "detections_sphere_mtcnn = dataset360.image_path.progress_apply(sphere_aux)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset360['detections_sphere_mtcnn'] = detections_sphere_mtcnn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
